--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,6 @@
     <string name="cad">cad</string>
     <string name="condition">condition</string>
     <string name="image_desc">image_desc</string>
+    <string name="title_activity_maps">MapsActivity</string>
+    <string name="backimagebutton">BackImageButton</string>
 </resources>
