--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,7 +23,7 @@
     <string name="price">Price</string>
     <string name="condition_hint">condition_hint</string>
     <string name="product_name">Product Name</string>
-    <string name="number">Number</string>
+    <string name="number">Number:</string>
     <string name="cad"> $Amount</string>
     <string name="condition">condition</string>
     <string name="image_desc">image_desc</string>
@@ -44,5 +44,8 @@
     <string name="already_registered">Already Registered? Log in here.</string>
     <string name="register">register</string>
     <string name="update_delete">Update/Delete</string>
+    <string name="description">Description:</string>
+    <string name="product_page">Product Page</string>
+    <string name="textview">TextView</string>
 
 </resources>
