updated product pages

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,16 +15,16 @@
     <string name="your_products">Your Products</string>
     <string name="update">update</string>
     <string name="save">save</string>
-    <string name="seller_name">seller_name</string>
-    <string name="seller_phone">seller_phone</string>
+    <string name="seller_name">seller name</string>
+    <string name="seller_phone">seller phone</string>
     <string name="add_product">Add Product</string>
     <string name="contact_info">Contact Info</string>
-    <string name="production_info">Production info</string>
-    <string name="price">Price</string>
-    <string name="condition_hint">condition_hint</string>
-    <string name="product_name">Product Name</string>
+    <string name="product_info">Production Info</string>
+    <string name="price">Price:</string>
+    <string name="condition_hint">condition</string>
+    <string name="product_name">product name</string>
     <string name="number">Number:</string>
-    <string name="cad"> $Amount</string>
+    <string name="cad"> amount in $</string>
     <string name="condition">condition</string>
     <string name="image_desc">image_desc</string>
     <string name="title_activity_maps">MapsActivity</string>
